[tool.poetry]
name = "quantfinpy"
version = "0.0.1"
description = "Quantitative finance in python."
authors = ["TradingPy"]

[tool.poetry.dependencies]
python = "^3.6.2"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
pytest-cov = "^3.0.0"
tox = "^3.24.5"
black  = "^21.12b0"
sphinx = "^4.3.2"
sphinx_rtd_theme = "^1.0.0"
mypy = "^0.931"
pylint = "^2.12.2"

[build-system]
requires = ["poetry-core>=1.0.7"]
build-backend = "poetry.core.masonry.api"
