[tool.poetry]
name = "quantfinpy"
version = "0.0.3"
description = "Quantitative finance in python."
authors = ["TradingPy"]

[tool.poetry.dependencies]
python = "^3.8"
attrs = "^21.4.0"
pandas = "^1.4.1"
typing-extensions = "^4.1.1" # for python versions prior to 3.10
multimethod = "^1.7"

[build-system]
requires = ["poetry-core>=1.0.7"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 120
